crates/toml/tests/snapshots/invalid/array/tables-02.stderr
TOML parse error at line 9, column 10
  |
9 |   [fruit.variety]
  |          ^^^^^^^
duplicate key
